<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/drawer_base_categories"
        android:checkableBehavior="single">
        <item
            android:id="@+id/deviceListFragment"
            android:icon="@drawable/ic_device_list"
            android:title="@string/drawer_menu_item_device_list" />
        <item
            android:id="@+id/networkScanFragment"
            android:icon="@drawable/ic_search_network"
            android:title="@string/drawer_menu_item_scan" />
        <item
            android:id="@+id/backupFragment"
            android:icon="@drawable/ic_import_export"
            android:title="@string/drawer_menu_item_backup" />
    </group>

    <group
        android:id="@+id/drawer_other_categories"
        android:checkableBehavior="single">
        <item
            android:id="@+id/githubShortcut"
            android:icon="@drawable/ic_github_logo"
            android:title="@string/drawer_menu_item_github" />
    </group>

</menu>