<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    app:startDestination="@id/deviceListFragment">

    <activity
        android:id="@+id/mainActivity"
        android:name="de.florianisme.wakeonlan.ui.MainActivity"
        android:label="@string/title_activity_main"
        tools:layout="@layout/activity_main" />

    <action
        android:id="@+id/MainActivity_to_AddMachineActivity"
        app:destination="@id/addMachineActivity" />

    <activity
        android:id="@+id/addMachineActivity"
        android:name="de.florianisme.wakeonlan.ui.modify.AddDeviceActivity"
        android:label="@string/title_activity_add_device"
        tools:layout="@layout/activity_modify_device" />

    <fragment
        android:id="@+id/deviceListFragment"
        android:name="de.florianisme.wakeonlan.ui.list.DeviceListFragment"
        android:label="@string/title_fragment_device_list"
        tools:layout="@layout/fragment_list_devices" />

    <fragment
        android:id="@+id/networkScanFragment"
        android:name="de.florianisme.wakeonlan.ui.scan.NetworkScanFragment"
        android:label="@string/title_fragment_network_scan"
        tools:layout="@layout/fragment_network_scan" />

    <fragment
        android:id="@+id/backupFragment"
        android:name="de.florianisme.wakeonlan.ui.backup.BackupFragment"
        android:label="@string/title_fragment_backup"
        tools:layout="@layout/fragment_backup" />
</navigation>