<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:paddingTop="?attr/actionBarSize">

    <TextView
        android:id="@+id/device_title_general"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/FontMonospaced"
        android:text="@string/device_title_general"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/device_name_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/add_device_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/device_title_general">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/device_name"
            style="@style/FontMonospaced"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:minHeight="48dp"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/device_status_ip_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/add_device_status_ip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/device_name_layout"
        app:placeholderText="192.168.0.100">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/device_status_ip"
            style="@style/FontMonospaced"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:minHeight="48dp"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/device_title_connectivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/FontMonospaced"
        android:text="@string/device_title_connection"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/device_status_ip_layout"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/device_mac_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/add_device_mac_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/device_title_connectivity"
        app:placeholderText="AB:12:CD:34:EF:56">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/device_mac"
            style="@style/FontMonospaced"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:minHeight="48dp"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/device_broadcast_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/add_device_broadcast_address"
        app:layout_constraintEnd_toStartOf="@id/broadcast_autofill"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/device_mac_layout"
        app:placeholderText="192.168.0.255">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/device_broadcast"
            style="@style/FontMonospaced"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:minHeight="48dp"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/broadcast_autofill"
        style="@style/Widget.App.Button.OutlinedButton.IconOnly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:background="#00000000"
        android:contentDescription="@string/add_device_autofill_broadcast"
        app:layout_constraintBottom_toBottomOf="@id/device_broadcast_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/device_broadcast_layout"
        app:srcCompat="@drawable/ic_autofill_broadcast" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/device_port_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/add_device_port"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/device_broadcast_layout">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/device_ports"
            style="@style/FontMonospaced"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:minHeight="48dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/device_title_security"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/FontMonospaced"
        android:text="@string/device_title_security"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/device_port_layout"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/device_secure_on_password_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/add_device_secure_on"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/device_title_security">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/device_secure_on_password"
            style="@style/FontMonospaced"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:minHeight="48dp"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>